# kaitaiStructCompile.importer

./: .editorconfig  .gitlab-ci.yml  .gitmodules  ReadMe.md  setup.cfg  setup.py
kaitaiStructCompile/: specImport.py
kaitaiStructCompile/importer/: __init__.py
tests/: test.py
