[metadata]
name = kaitaiStructCompile.importer
author = KOLANICH
url = https://gitlab.com/kaitaiStructCompile.py/kaitaiStructCompile.importer
description = the package to import ksy files
long_description = file: ReadMe.md
keywords = KaitaiStruct, compiler, binary format, setuptools, automation
license = Unlicense
license_file = UNLICENSE
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent

[options]
python_requires = >=3.4
zip_safe = False
include_package_data = True
packages = kaitaiStructCompile.importer
py_modules = kaitaiStructCompile.specImport
setup_requires = setuptools; setuptools_scm;
test_suite = tests.test
install_requires = 
	kaitaiStructCompile @ git+https://gitlab.com/kaitaiStructCompile.py/kaitaiStructCompile.py.git
	kaitaiStructCompile.schemas @ git+https://gitlab.com/kaitaiStructCompile.py/kaitaiStructCompile.schemas.git

